section-12/istio/istio-destination.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
spec:
  host: customer
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: waiter
spec:
  host: waiter
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
