section-12/istio/istio-vs-waiter-abort.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
  - route:
    - destination:
        host: customer
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: waiter
spec:
  hosts:
  - waiter
  http:
  - route:
    - destination:
        host: waiter
        subset: v1
      weight: 50
    - destination:
        host: waiter
        subset: v2
      weight: 50
    fault:
      abort:
        percent: 10
        httpStatus: 500
